@@ -1,3 +1,9 @@
+2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-05-13
+	* not sending error event for lumi cells from destructor
+	* more error logs
+
 2012-05-27 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-05-12
